--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -6,7 +6,9 @@
 
 {% block content %}
 <h1>Profile of {{ profile.user.username }}</h1>
-
+{% if request.user.is_authenticated and profile.user.id == request.user.id %}
+    <a href="{% url 'account_logout' %}" class="btn btn-outline-danger mx-1 p-15 float-end">Logout</a>
+{% endif %}
 <img
 src="{{ profile.image.url }}"
 alt="Profile Image"
