--- a/backend/templates/navbar.html
+++ b/backend/templates/navbar.html
@@ -20,9 +20,21 @@
             </ul>
           </li>
         </ul>
-        <span class="navbar-text d-flex justify-content-end">
-          <a href="{% url 'profile' request.user.id %}">Profile</a>
-        </span>
+
+        <div class="btns d-flex justify-content-end">
+          {% if request.user.is_anonymous %}
+            <a href="{% url 'account_login' %}" class="btn btn-outline-success mx-1">Login</a>
+            <a href="{% url 'account_signup' %}" class="btn btn-primary mx-1">Register</a>
+          {% else %}
+          <span class="navbar-text d-flex justify-content-end">
+              <a href="{% url 'profile' request.user.id %}" class="me-2">
+                <img src="{{ request.user.profile.image.url }}" alt="" class="rounded-circle" style="width: 35px; height: 35px;">
+              </a>
+          </span>
+          {% endif %}
+        </div>
+        
+       
       </div>
     </div>
   </nav>
