finish all paginations

--- a/backend/templates/form_snippets.html
+++ b/backend/templates/form_snippets.html
@@ -1,7 +1,7 @@
 {% load django_bootstrap5 %}
 
 <div class="container">
-    <form method="POST" class="form">
+    <form method="POST" class="form" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form form %}
         <button type="submit" class="btn btn-success">
