--- a/backend/templates/navbar.html
+++ b/backend/templates/navbar.html
@@ -4,7 +4,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
@@ -21,7 +21,7 @@
           </li>
         </ul>
 
-        <div class="btns d-flex justify-content-end">
+        <div class="btns d-flex justify-content-end float-end">
           {% if request.user.is_anonymous %}
             <a href="{% url 'account_login' %}" class="btn btn-outline-success mx-1">Login</a>
             <a href="{% url 'account_signup' %}" class="btn btn-primary mx-1">Register</a>
@@ -33,8 +33,6 @@
           </span>
           {% endif %}
         </div>
-        
-       
       </div>
     </div>
   </nav>
