--- a/backend/templates/fruit_pagin.html
+++ b/backend/templates/fruit_pagin.html
@@ -8,17 +8,31 @@
             <p class="card-text">{{fruit.discription}}</p>
         </div>
       
-        <div class="action-btns mt-2 card-footer d-flex justify-content-between align-items-center gap-3">
+        <div class="action-btns mt-2 card-footer gap-3">
+
+            {% if fruit.id in request.session.liked_fruit %}
+            <a href="{% url 'like_fruit' fruit.id %}" 
+                class="text-muted d-flex align-items-center bg-success rounded-circle p-1" style="width: 27px; height: 27px;">
+              👍
+            </a> 
+            {% else %}
+            <a href="{% url 'like_fruit' fruit.id %}" 
+                class="text-muted d-flex align-items-center bg-light rounded-circle p-1" style="width: 27px; height: 27px;">
+              👍
+            </a> 
+            {% endif %}
+
             <a href="{% url 'profile' fruit.author.id %}" class="text-muted d-flex">
                 <img src="{{ fruit.author.profile.image.url }}" alt="" class="rounded-circle me-2" width="25" height="25">
                 {{ fruit.author.username }}
             </a>
-            {% if request.user.id == fruit.author.id %}
             <div class="d-flex justify-content-end gap-1">
+                <a class="btn btn-sm btn-outline-primary" href="{% url 'fruit_details' fruit.id %}">Details</a>
+                {% if request.user.id == fruit.author.id %}
                 <a class="btn btn-sm btn-outline-info" href="{% url 'update_fruit' fruit.id %}">Update</a>
                 <a class="btn btn-sm btn-outline-danger" href="{% url 'delete_fruit' fruit.id %}">Delete</a>
+                {% endif %}
             </div>
-            {% endif %}
         </div>
 
       </div>
