--- a/backend/templates/navbar.html
+++ b/backend/templates/navbar.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Style Shop</a>
@@ -19,13 +22,28 @@
               <a href="{% url 'create_command' %}" class="text-decoration-none">Create new command</a> 
             </ul>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="{% url 'contacts' %}">FAQ</a>
+          </li>
         </ul>
 
         <div class="btns d-flex justify-content-end float-end">
+          <div class="dropdown-langs">
+            <a href="#">{{ request.session.current_language }}</a>
+            <div class="languages">
+              <a href="{% url 'switch_language' 'en' %}">en</a>
+              <a href="{% url 'switch_language' 'ru' %}">ru</a>
+              <a href="{% url 'switch_language' 'uz' %}">uz</a>
+            </div>
+          </div>
+
           {% if request.user.is_anonymous %}
             <a href="{% url 'account_login' %}" class="btn btn-outline-success mx-1">Login</a>
             <a href="{% url 'account_signup' %}" class="btn btn-primary mx-1">Register</a>
           {% else %}
+
+          <a class="navbar-text text-decoration-none me-4" href="{% url 'liked_posts' %}">Liked Posts</a>
+          
           <span class="navbar-text d-flex justify-content-end">
               <a href="{% url 'profile' request.user.id %}" class="me-2">
                 <img src="{{ request.user.profile.image.url }}" alt="" class="rounded-circle" style="width: 35px; height: 35px;">
