--- a/backend/static/styles/navbar.css
+++ b/backend/static/styles/navbar.css
@@ -2,7 +2,12 @@
     margin-right: 20px;
 }
 
-a {
+.languages a {
+    text-decoration: none;
+    color: snow;
+}
+
+.dropdown-toggle {
     text-decoration: none;
     color: snow;
 }
